added html file

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
 
+<h2>Pablo's Webpage :) </h2>
+<p class="text-center">Jolteon - If it is angered or startled, the fur all over its body bristles like sharp needles that pierce foes.</p>
+<img src="https://i.pinimg.com/originals/ca/b0/bf/cab0bf224fd747d6fdebf86a13d321de.jpg" alt="Jolteon">
+
 </body>
-</html>
+</html>l>
