--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,11 +5,33 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Title</title>
 </head>
+<style>
+body {
+  background-image: url('https://wallpapercave.com/wp/DHxNgvZ.jpg');
+
+}
+</style>
 <body>
 
-<h2>Pablo's Webpage :) </h2>
-<p class="text-center">Jolteon - If it is angered or startled, the fur all over its body bristles like sharp needles that pierce foes.</p>
-<img src="https://i.pinimg.com/originals/ca/b0/bf/cab0bf224fd747d6fdebf86a13d321de.jpg" alt="Jolteon">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+
+<div class="container">
+
+<h2 class="text-center" style="background-color:#0EFDF1;">Pablo's Webpage :) </h2>
+<p class="text-center" style="background-color:#ffff66;">Jolteon - If it is angered or startled, the fur all over its body bristles like sharp needles that pierce foes.</p>
+<img src="https://i.pinimg.com/originals/ca/b0/bf/cab0bf224fd747d6fdebf86a13d321de.jpg" alt="Jolteon" class="rounded-lg">
+    <br><br><br>
+
+
+</div>
+<div class="container">
+    <p class="text-center" style="background-color:#0EFDF1;">Vaporeon- When Vaporeon’s fins begin to vibrate, it is a sign that rain will come within a few hours.</p>
+   <center> <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/59d9dbc1-ed65-46c5-b54d-265ef0529d33/d7nc12u-3f71f403-a364-4b77-a1a0-de5f80a0cac0.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvNTlkOWRiYzEtZWQ2NS00NmM1LWI1NGQtMjY1ZWYwNTI5ZDMzXC9kN25jMTJ1LTNmNzFmNDAzLWEzNjQtNGI3Ny1hMWEwLWRlNWY4MGEwY2FjMC5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.gFKWALpoe3NhkVjnxJr3bQYupr0w-rAHCn8EAnOwsg0"
+         alt="Vaporeon"></center>
+</div>
 
 </body>
-</html>l>
+
+</html>
