--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,3 +43,82 @@ body {
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+<!--<!doctype html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <title>Pokemon</title>-->
+<!--    &lt;!&ndash; Required meta tags &ndash;&gt;-->
+<!--    <meta charset="utf-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+
+<!--    &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"-->
+<!--          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+<!--</head>-->
+<!--<style>-->
+<!--body {-->
+<!--  background-image: url('https://wallpapercave.com/wp/DHxNgvZ.jpg');-->
+<!--}-->
+<!--</style>-->
+<!--<body>-->
+<!--<div class="jumbotron">-->
+<!--    <h1 class="display-3" style="background-color:#0EFDF1;">Pablo's Webpage</h1>-->
+<!--    <p class="lead" style="background-color:#ffff66;">Eeveelutions <3 </p>-->
+<!--    <hr class="my-2">-->
+<!--</div>-->
+
+
+
+<!--<div class="container">-->
+
+<!--    <h2 class="text-center" style="background-color:#0EFDF1;"> Pablo's WebPage :) </h2>-->
+<!--    <p class="text-center" style="background-color:#ffff66;">Jolteon - If it is angered or startled, the fur all over its body bristles like sharp needles that pierce foes.</p>-->
+<!--    <img src="https://i.pinimg.com/originals/ca/b0/bf/cab0bf224fd747d6fdebf86a13d321de.jpg" alt="Jolteon" class="rounded-lg">-->
+<!--    <br><br><br>-->
+
+<!--</div>-->
+
+<!--<div class="container">-->
+<!--    <p class="text-center" style="background-color:#0EFDF1;">Vaporeon- When Vaporeon’s fins begin to vibrate, it is a sign that rain will come within a few hours.</p>-->
+<!--    <center> <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/59d9dbc1-ed65-46c5-b54d-265ef0529d33/d7nc12u-3f71f403-a364-4b77-a1a0-de5f80a0cac0.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvNTlkOWRiYzEtZWQ2NS00NmM1LWI1NGQtMjY1ZWYwNTI5ZDMzXC9kN25jMTJ1LTNmNzFmNDAzLWEzNjQtNGI3Ny1hMWEwLWRlNWY4MGEwY2FjMC5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.gFKWALpoe3NhkVjnxJr3bQYupr0w-rAHCn8EAnOwsg0"-->
+<!--                  alt="Vaporeon"></center>-->
+<!--    <br><br><br>-->
+<!--</div>-->
+
+<!--<div class="container">-->
+<!--    <p class="text-center" style="background-color:#1a8cff;">Umbreon- When this Pokémon becomes angry, its pores secrete a poisonous sweat, which it sprays at its opponent’s eyes. </p>-->
+<!--    <center> <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/4bd5316e-8001-491d-94e2-a898895d1de0/d4nn6ju-6c941fa8-389f-468f-ac13-0cf8550081a7.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvNGJkNTMxNmUtODAwMS00OTFkLTk0ZTItYTg5ODg5NWQxZGUwXC9kNG5uNmp1LTZjOTQxZmE4LTM4OWYtNDY4Zi1hYzEzLTBjZjg1NTAwODFhNy5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.fFfSXUhe2eO_XlH-I_RpWq-zbqmZ-l2sBVA6V-oCbk4"-->
+<!--                  alt="Umbreon"></center>-->
+<!--    <br><br><br>-->
+<!--</div>-->
+
+
+
+
+
+
+
+
+
+<!--&lt;!&ndash; Optional JavaScript &ndash;&gt;-->
+<!--&lt;!&ndash; jQuery first, then Popper.js, then Bootstrap JS &ndash;&gt;-->
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"-->
+<!--        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
+<!--        crossorigin="anonymous"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"-->
+<!--        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"-->
+<!--        crossorigin="anonymous"></script>-->
+<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"-->
+<!--        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"-->
+<!--        crossorigin="anonymous"></script>-->
+<!--</body>-->
+<!--</html>-->
